--- a/src/AudioBand/Views/Wpf/SettingsWindow.xaml
+++ b/src/AudioBand/Views/Wpf/SettingsWindow.xaml
@@ -18,7 +18,7 @@
             Height="600"
             Width="800"
             GlowBrush="{DynamicResource AccentColorBrush}"
-            WindowStartupLocation="CenterScreen" x:ClassModifier="internal">
+            WindowStartupLocation="CenterScreen">
     <metro:MetroWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
